# saulinfo-site

./: .env.example  .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml  update
.github/workflows/: deploy.yml  publish-image.yml
deploy/: progress.sh  update.sh
deploy/nginx/: www.saulinfo.ru.conf
docs/: install-update-ru.md
src/saulinfo_site/: app.py  auth_store.py  config.py  gateway.py  vk_auth.py  xui_bridge.py
src/saulinfo_site/static/: site_v2.css  style.css
src/saulinfo_site/templates/: base.html  dashboard.html  index.html  keys.html  keys_site.html  keys_v2.html  keys_v3.html  login.html  payment_pending_site.html  personal_data_consent.html  privacy.html  profile.html  register.html  support.html  support_site.html  support_v2.html
